# stock-fundamental-scanner

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  exceptions.py  main.py  models.py
app/providers/: earnings_finnhub.py  filings_sec.py  news_marketaux.py  news_provider.py
app/services/: gui_adapter_service.py  report_service.py  scanner_service.py  scoring_service.py  sentiment_service.py  watchlist_service.py
app/ui/: streamlit_app.py
app/utils/: text_utils.py  time_utils.py
config/: settings.example.yaml  watchlist.example.yaml
tests/: test_finnhub_provider.py  test_gui_adapter.py  test_news_provider.py  test_scanner_service.py  test_scoring_service.py  test_sentiment_service.py  test_watchlist_service.py
